--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,3 +1,42 @@
 {{!-- Setup the index.handlebars to have the template that Handlebars can render onto.
 
 Create a button in index.handlebars that will submit the user input into the database. --}}
+
+<h1>Bob's Burgers!</h1>
+
+<h2>Burger's That Have Not Been Eaten!</h2>
+
+<ul>
+  {{#each cats}}
+    {{#unless sleepy}}
+      {{> cats/cat-block sleep=true}}
+    {{/unless}}
+  {{/each}}
+</ul>
+
+<h2>Burger's That Have Been Eaten!</h2>
+
+<ul>
+  {{#each cats}}
+    {{#if sleepy}}
+      {{> cats/cat-block sleep=false}}
+    {{/if}}
+  {{/each}}
+</ul>
+
+<h2>Add a Burger</h2>
+<form class="create-form">
+
+  <div class="form-group">
+    <label for="ca">Burger Name:</label>
+    <input type="text" id="ca" name="name">
+  </div>
+
+  <div class="form-group">
+    <label for="sleepy">Eat It?</label><br>
+    <input type="radio" name="sleepy" value="1" checked> Eaten!<br>
+    <input type="radio" name="sleepy" value="0"> Still Available
+  </div>
+
+  <button type="submit">Create!</button>
+</form>
