--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
 		<title>Bob's Burgers</title>
 		<script src="https://code.jquery.com/jquery.js"></script>
-		<script src="/assets/js/cats.js"></script>
+		<script src="/assets/js/cat.js"></script>
 	</head>
 	<body>
 		{{{ body }}}
