--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,14 +2,17 @@
 
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
-		<link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
-		<title>Bob's Burgers</title>
-		<script src="https://code.jquery.com/jquery.js"></script>
-		<script src="/assets/js/cat.js"></script>
-	</head>
-	<body>
-		{{{ body }}}
-	</body>
+	<link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
+	<title>Bob's Burgers</title>
+	<script src="https://code.jquery.com/jquery.js"></script>
+	<script src="/public/assets/css/burger_style.css"></script>
+</head>
+
+<body>
+	{{{ body }}}
+</body>
+
 </html>
