it doesn't work

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -29,7 +29,7 @@ Create a button in index.handlebars that will submit the user input into the dat
 
   <div class="form-group">
     <label for="ca">Name Your Burger:</label>
-    <input type="text" id="ca" name="burger_name">
+    <input type="text" id="ca" name="name">
   </div>
 
   <button type="submit">Add</button>
