--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
 	<title>Bob's Burgers</title>
 	<script src="https://code.jquery.com/jquery.js"></script>
-	<script src="/public/assets/css/burger_style.css"></script>
+	<link rel='stylesheet' type='text/css' href='/public/assets/js/burgerfront.js' />
 </head>
 
 <body>
