i don't know what's wrong again

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,7 +2,9 @@
 
 Create a button in index.handlebars that will submit the user input into the database. --}}
 
+<hr>
 <h1>Bob's Burgers</h1>
+<hr>
 
 <h2>Not Eaten</h2>
 
@@ -14,6 +16,8 @@ Create a button in index.handlebars that will submit the user input into the dat
   {{/each}}
 </ul>
 
+<hr>
+
 <h2>Eaten</h2>
 
 <ul>
@@ -24,6 +28,8 @@ Create a button in index.handlebars that will submit the user input into the dat
   {{/each}}
 </ul>
 
+<hr>
+
 <h2>Add a Burger</h2>
 <form class="create-form">
 
@@ -32,5 +38,6 @@ Create a button in index.handlebars that will submit the user input into the dat
     <input type="text" id="ca" name="name">
   </div>
 
-  <button type="submit">Add</button>
+  <button id="submit" type="submit">Add</button>
 </form>
+<hr>
