--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,11 +8,12 @@
 	<link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
 	<title>Bob's Burgers</title>
 	<script src="https://code.jquery.com/jquery.js"></script>
-	<link rel='stylesheet' type='text/css' href='/public/assets/js/burgerfront.js' />
 </head>
 
-<body>
+<body style="background-color: yellow;">
+	<div class="container" style="background-color: white; padding: 20px; margin-top: 20px;">
 	{{{ body }}}
+	</div>
 </body>
 
 </html>
