link js to handlebars

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
 	<title>Bob's Burgers</title>
 	<script src="https://code.jquery.com/jquery.js"></script>
+	<script src="/public/assets/js/burgerfront.js"></script>
 </head>
 
 <body style="background-color: yellow;">
