--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,13 +7,14 @@
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
 	<title>Bob's Burgers</title>
-	<script src="https://code.jquery.com/jquery.js"></script>
+	<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+	 crossorigin="anonymous"></script>
 	<script src="/public/assets/js/burgerfront.js"></script>
 </head>
 
 <body style="background-color: yellow;">
 	<div class="container" style="background-color: white; padding: 20px; margin-top: 20px;">
-	{{{ body }}}
+		{{{ body }}}
 	</div>
 </body>
 
