--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -1,7 +1,7 @@
 <li>
 	{{this.burger_name}}
 
-	<button class="devour-burger" data-id="{{id}}" data-newBurger="{{devoured}}">
+	<button class="devour-burger" data-id="{{id}}" data-newburger="{{devoured}}">
 		{{#if devoured}}Devour!{{/if}}
 	</button>
 
