--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,7 +3,7 @@
 Create a button in index.handlebars that will submit the user input into the database. --}}
 
 <hr>
-<h1>Bob's Burgers</h1>
+<h1>Rob's Burgers</h1>
 <hr>
 
 <h2>Not Eaten</h2>
