--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,7 +5,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>Bob's Burgers</title>
+	<title>Rob's Burgers</title>
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
 	 crossorigin="anonymous"></script>
 	<script src="assets/js/burgerfront.js"></script>
